Fix terminal and splitter style
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div data-role="splitter" data-split-mode="vertical" data-split-sizes="85, 15">
             <div id="editor-div"></div>
             <div id="editor-bottom">
-                <div id="terminal" class="h-100"></div>
+                <div id="terminal"></div>
                 <div id="status-bar" class="status-bar">
                     <p> Status Bar </p>
                     <p id="status-bar-line"></p>
