index: Fix mim size of terminal splitter
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </div>
     <div id= "main-div" data-role="splitter" class="h-100" data-on-resize-split="resizeSplit">
-        <div data-role="splitter" data-split-mode="vertical" data-split-sizes="95, 5">
+        <div data-role="splitter" data-split-mode="vertical" data-split-sizes="95, 5" data-min-sizes="18px">
             <div id="editor-div"></div>
             <div id="editor-bottom">
                 <div id="terminal"></div>
