html: Use lz-string from ajax
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/html/index.html
+++ b/html/index.html
@@ -102,7 +102,7 @@
 
     <script src="ace/ace.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="qtloader.js"></script>
-    <script type="text/javascript" src="lz-string/libs/lz-string.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.js"></script>
     <script type='text/javascript'>
         var qtLoader;
         var editor = ace.edit("editor-div");
