html: Use metro from ajax
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 
 <body onload="init()">
     <!--Use not released version for splitter event-->
-    <script src="metro.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/metro/4.3.7/js/metro.min.js"></script>
 
     <div class="header-row">
         <span class="header-brand-1">QML</span>
