--- a/html/index.html
+++ b/html/index.html
@@ -2,11 +2,12 @@
 <html lang="en-us">
 
 <head>
+    <link rel="icon" type="image/png" href="icon.png" />
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-all.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>qmlonline</title>
+    <title>QaterialOnline</title>
 </head>
 
 <body onload="init()">
@@ -14,7 +15,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/metro/4.3.7/js/metro.min.js"></script>
 
     <div class="header-row">
-        <span class="header-brand-1">QML</span>
+        <span class="header-brand-1">QATERIAL</span>
         <span class="header-brand-2">Online</span>
 
         <div class="dropdown">
@@ -26,7 +27,7 @@
             <button onclick="share()" class="dropdown-button">Share</button>
         </div>
 
-        <div class="github-button" onclick="window.open('https://github.com/patrickelectric/qmlonline');">
+        <div class="github-button" onclick="window.open('https://github.com/OlivierLDff/QaterialOnline');">
             <svg data-icon="github" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" data-fa-i2svg="" class="github-icon"><path fill="currentColor" d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path></svg>
         </div>
     </div>
@@ -94,7 +95,7 @@
         function loadFile(filePath) {
             //TODO: use https://xhr.spec.whatwg.org/
             let request = new XMLHttpRequest();
-            request.open("GET", "qml/examples/" + filePath, false);
+            request.open("GET", filePath, false);
             request.send();
             return request.status === 200 ? request.responseText : "";
         }
@@ -102,7 +103,7 @@
 
     <script type="text/javascript" src="qtloader.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.11/ace.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.11/theme-dracula.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.11/theme-tomorrow_night.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.11/mode-qml.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.js"></script>
     <script type='text/javascript'>
@@ -122,7 +123,7 @@
             terminal.innerHTML = '';
         }
 
-        editor.setTheme("ace/theme/dracula");
+        editor.setTheme("ace/theme/tomorrow_night");
         editor.session.setMode("ace/mode/qml");
         editor.setOption("showInvisibles", true)
         editor.setOption("useWorker", false); // Avoid problems with syntax check
@@ -210,7 +211,7 @@
                     };
                 },
             });
-            qtLoader.loadEmscriptenModule("qmlonline");
+            qtLoader.loadEmscriptenModule("QaterialOnline");
 
             // TODO: Find a better way to set the initial code and wait for the webassembly to start
             var intervalID = setInterval(
