index: Remove .git if it exists in url
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/html/index.html
+++ b/html/index.html
@@ -135,7 +135,7 @@
 
         function populateBuildInfo(version) {
             let buildInfo = document.getElementById("build-info")
-            buildInfo.href = `${version.url}/-/tree/${version.hash}`
+            buildInfo.href = `${version.url.replace('.git', '')}/-/tree/${version.hash}`
             buildInfo.innerHTML = `Build: ${version.date} - ${version.hash}`
         }
 
